# SoundAi

./: CMakeLists.txt  am113a-toolchain.cmake  readme  readme.md
AICommon/: CMakeLists.txt
AICommon/DMInterface/include/DMInterface/: AlarmAckObserverInterface.h  AlarmsPlayerObserverInterface.h  AutomaticSpeechRecognizerUIDObserverInterface.h  BringUpObserverInterface.h  DomainHandlerInterface.h  PlaybackRouterInterface.h  ResourcesPlayerObserverInterface.h  VolumeObserverInterface.h
AICommon/Utils/include/Utils/: DeviceInfo.h  NetworkStateObserverInterface.h
AICommon/Utils/include/Utils/Attachment/: AttachmentManager.h  InProcessAttachment.h
AICommon/Utils/include/Utils/BringUp/: BringUpEventType.h
AICommon/Utils/include/Utils/Channel/: AudioTrackManagerInterface.h
AICommon/Utils/include/Utils/DialogRelay/: DialogUXStateObserverInterface.h  DialogUXStateRelay.h
AICommon/Utils/include/Utils/Logging/: ConsoleLogger.h  Level.h  LogEntry.h  LogEntryBuffer.h  LogLevelObserverInterface.h  Logger.h  LoggerSinkManager.h  ModuleLogger.h  SinkObserverInterface.h  ZlogManager.h
AICommon/Utils/include/Utils/MediaPlayer/: ErrorTypes.h  MediaPlayerInterface.h  MediaPlayerObserverInterface.h
AICommon/Utils/include/Utils/SharedBuffer/: BufferLayout.h  Reader.h
AICommon/Utils/include/Utils/SoundAi/: SoundAiObserverInterface.h
AICommon/Utils/src/: DeviceInfo.cpp  TestS.cpp  cJSON.cc
AICommon/Utils/src/DialogRelay/: DialogUXStateRelay.cpp
AICommon/Utils/src/Logging/: ConsoleLogger.cpp  Level.cpp  LogStringFormatter.cpp  Logger.cpp  LoggerSinkManager.cpp  ModuleLogger.cpp  SafeCTimeAccess.cpp  ThreadMoniker.cpp  ZlogManager.cpp
ASR/: CMakeLists.txt
ASR/AIUI/src/: AIUIASRListener.cpp  AIUIAutomaticSpeechRecognizer.cpp  AIUIAutomaticSpeechRecognizer.cpp-bk
ASR/include/ASR/: ASRGainTune.h  ASRRefreshConfiguration.h  AutomaticSpeechRecognizerConfiguration.h  AutomaticSpeechRecognizerRegister.h  GenericAutomaticSpeechRecognizer.h
ASR/src/: ASRGainTune.cpp  ASRRefreshConfiguration.cpp  AutomaticSpeechRecognizerRegister.cpp  CMakeLists.txt  GenericAutomaticSpeechRecognizer.cpp
ATM/AudioTrackManager/src/: AudioTrackManager.cpp
Application/: CMakeLists.txt
Application/include/Application/: AIClient.h  ConsoleZloger.h  ControlActionManager.h  InputControlInteraction.h  PortAudioMicrophoneWrapper.h  SampleApp.h  UIManager.h  mq_api.h  mq_internal.h
Application/src/: AIClient.cpp  CMakeLists.txt  ConsoleZloger.cpp  ControlActionManager.cpp  InputControlInteraction.cpp  Main.cpp  PortAudioMicrophoneWrapper.cpp  SampleApp.cpp  UIManager.cpp
Domain/: CMakeLists.txt
Domain/Alarms/: CMakeLists.txt
Domain/AlarmsPlayer/: CMakeLists.txt
Domain/AlarmsPlayer/src/: AlarmsPlayer.cpp  CMakeLists.txt
Domain/MediaStream/: CMakeLists.txt
Domain/ResourcesPlayer/: CMakeLists.txt
Domain/ResourcesPlayer/include/: Md5Compute.h  http.h
Domain/ResourcesPlayer/src/: CMakeLists.txt  Md5Compute.c  Md5Compute.cpp  ResourcesPlayer.cpp  cJSON.cpp  http.cpp  md5.cpp
Domain/SpeechSynthesizer/src/: CMakeLists.txt  SpeechSynthesizer.cpp
Domain/VolumeManager/: CMakeLists.txt
Domain/VolumeManager/src/: CMakeLists.txt  VolumeManager.cpp
KWD/: CMakeLists.txt
KWD/IflyTek/include/: IflyTekKeywordDetector.h
KWD/IflyTek/src/: IflyTekKeywordDetector.cpp
KWD/KeywordDetector/: CMakeLists.txt
KWD/KeywordDetector/include/KeywordDetector/: KeywordDetector.h
KWD/KeywordDetector/src/: CMakeLists.txt  KeywordDetector.cpp
KWD/SoundAi/src/: EchoCancellationImplementation.cpp  SoundAiKeywordDetector.cpp
KWD/include/KWD/: KeywordDetectorRegister.h
KWD/src/: CMakeLists.txt  GenericKeywordDetector.cpp  KeywordDetectorRegister.cpp
MediaPlayer/: CMakeLists.txt
MediaPlayer/AudioMediaPlayer/src/: AOWrapper.cpp  CMakeLists.txt  FFmpegAttachmentInputController.cpp  FFmpegDecoder.cpp  FFmpegDeleter.cpp  FFmpegStreamInputController.cpp  FFmpegUrlInputController.cpp  UrlEncode.cpp
MediaPlayer/AudioMediaPlayer/test/: AOWrapperAttachmentTest.cpp  AOWrapperMockTest.cpp  AOWrapperTest.cpp  AOWrapperTestLoop.cpp  CMakeLists.txt
MediaPlayer/PortAudioMediaPlayer/: CMakeLists.txt
MediaPlayer/PortAudioMediaPlayer/include/PortAudioMediaPlayer/: DecoderInterface.h  Endian.h  FFmpegInputControllerInterface.h  PaBufferQueue.h  PaWrapper.h  PlaybackConfiguration.h
MediaPlayer/PortAudioMediaPlayer/src/: CMakeLists.txt  PaBufferQueue.cpp  PaWrapper.cpp  PlaybackConfiguration.cpp
MediaPlayer/PortAudioMediaPlayer/test/: CMakeLists.txt  PaWrapperTest.cpp  pa-ff
Modules/: CMakeLists.txt
Modules/Bringup/: CMakeLists.txt
Modules/Bringup/include/: Bringup.h
Modules/Bringup/src/: Bringup.cpp  CMakeLists.txt
Modules/KugouMusic/: http.c  http.h  readme.txt
NLP/include/NLP/: DomainProxy.h  DomainRouter.h  MessageInterpreter.h  NLPDomain.h  NLPMessage.h
NLP/src/: DomainProcessor.cpp  DomainProxy.cpp  DomainRouter.cpp  DomainSequencer.cpp  MessageInterpreter.cpp  NLPDomain.cpp  NLPMessage.cpp
SndAi/: CMakeLists.txt
SndAi/SoundAi/: CMakeLists.txt
SndAi/SoundAi/include/SoundAi/: SoundAiEngine.h
SndAi/SoundAi/src/: CMakeLists.txt  SoundAiEngine.cpp
SndAi/SoundAi/test/: CMakeLists.txt  SoundAiEngineTest.cpp
ThirdLibrary/: CMakeLists.txt
ThirdLibrary/Iflytek/: readme.txt
ThirdLibrary/Iflytek-am113a/: CMakeLists.txt
ThirdLibrary/Iflytek-am113a/AIUI/cfg/: aiui.cfg
ThirdLibrary/Iflytek/AIUI/: loglog_map
ThirdLibrary/Iflytek/lib/: readme.txt
ThirdLibrary/Iflytek/msc/: msc.cfg
ThirdLibrary/Open3rd/include/: properties.h
ThirdLibrary/Open3rd/lib/: libao.la  libao.so.4.1.0  libavdevice.so.58.3.100  libavfilter.so.7.16.100  libavutil.so.56.14.100  libcrypto.so.1.0.0  libcrypto.so.1.1  libjsoncpp.so.1.8.3  libportaudio.so.2.0.0  libsqlite3.la  libsqlite3.so.0.8.6  libssl.so.1.0.0  libssl.so.1.1  libswresample.so.3.1.100  (+1 more)
ThirdLibrary/SoundAi/: CMakeLists.txt
ThirdLibrary/SoundAi/include/denoise/: common.h  denoise.h  denoise_option.h  wake.h  wake_option.h
ThirdLibrary/SoundAi/sai_config/: license.txt  saicfg.q  saires_sai.par  saires_sai.q  saires_sai.txt  saires_sai2.q
(+40 files in other folders)
